--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    min-width: 320px;
+    min-height: 480px; 
 }
 
 .app {
@@ -105,6 +107,40 @@
 }
 
 :root {
-    --footer-height: 1rem;
-    --navbar-height: 7rem;
+    --footer-height: 5vh;
+    --navbar-height: 20vh;
+}
+
+@media (max-width: 1200px) {
+    :root {
+      --footer-height: 4vh;
+      --navbar-height:10vh;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    :root {
+      --footer-height: 6vh;
+      --navbar-height: 9vh;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    :root {
+      --footer-height: 7vh;
+      --navbar-height: 9vh;
+    }
+  }
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.list {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(var(--v-theme-bg)) !important;
+    color: black !important;
 }
